2014-01-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add "make drop-database".

	* fake-cluster-control (d): New.
	* Makefile.am (drop-database): New target.

2014-01-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Create database exactly once, after daemon up.

	* fake-cluster-control (hopefully):
	Use ‘return’, not ‘exit’ on success.
	(1): Use ‘truly_down’ and convert early ‘exit’ to conditional
	block around daemon up commands; add commands to check for,
	and create if necessary, database ‘guile_pg_test’.
	* basic.scm: Remove all calls to ‘fresh!’ and ‘drop!’.
	* large.scm: Likewise.
	* meta.scm: Likewise.
	* types-table.scm: Likewise.
	* testing.scm (d/c, drop!, fresh!): Delete procs.

2014-01-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Add abstraction: frob

	* fake-cluster-control (frob): New func.
	(truly_up): Use ‘frob’.

2014-01-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Drop basic test table when done.

	* basic.scm (test:close): Do "DROP TABLE test" and validate.

2014-01-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Use temporary tables.

	* testing.scm: Import SRFI 13.
	(temp-table-command): New proc.
	* basic.scm (tmp-table): New proc.
	(test:set-notice-out!-1, test:set-notice-out!-2): Use ‘tmp-table’.
	(test:get-copy-data): Do "SELECT .. INTO TEMP".
	(test:asynchronous-retrieval): Use ‘tmp-table’.
	* large.scm (test:make-table): Use ‘temp-table-command’.

2014-01-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Use ‘(guile-baux common)’ procs.

	* runtest.in: Arrange to add ‘@abs_top_srcdir@/build-aux’
	to the ‘%load-path’ in the Guile invocation.
	* testing.scm (fs): Delete proc.
	(guile-baux common): Add ‘use-modules’ form.
	(d/c): Use ‘fso’.
	(fresh!): Use ‘die’.
	* alive.scm: Use ‘fso’.
	* basic.scm (ok?): Likewise.
	(ftype-name): Use ‘fs’.
	(test:pg-guile-pg-loaded, test:make-connection)
	(test:parameter-status, test:server-version): Use ‘fso’.
	(test:load-records): Use ‘fs’.
	(test:pg-exec-params): Use ‘fso’, ‘fs’.